Handle both jdk8 and 11+ in the same script